# htsc

./: CHANGELOG.md  README.md  hie.yaml  htsc.cabal
app/: Main.hs
src/: Htsc.hs
