cabal-version:       2.4
name:                htsc
version:             0.0.0.0
synopsis:            Haskell compiler for the (subset of) TypeScript language.
description:         Haskell compiler for the (subset of) TypeScript language.
license:             MIT
license-file:        LICENSE
author:              Krzysztof Hrynczenko
maintainer:          Krzysztof Hrynczenko <jeniopy@gmail.com>
copyright:           2021 Krzysztof Hrynczenko
category:            Compilers/Interpreters
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.4

common common-options
  build-depends:       base ^>= 4.13.0.0 , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Htsc

executable htsc
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       htsc
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite htsc-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       htsc
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark htsc-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , htsc
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
